force-app/main/default/objects/Account_Historical_View__b/Account_Historical_View__b.object-meta.xml
<CustomObject>
    <label>Account Historical View</label>
    <pluralLabel>Account Historical Views</pluralLabel>
</CustomObject>