force-app/main/default/objects/Account_Historical_View__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Historical Views</relationshipLabel>
    <relationshipName>Account_Historical_Views</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>