force-app/main/default/objects/Account_Historical_View__b/fields/SNAPSHOT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SNAPSHOT_TYPE__c</fullName>
    <label>SNAPSHOT_TYPE</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>