force-app/main/default/objects/Account_Historical_View__b/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <label>START_DATE</label>
    <type>DateTime</type>
</CustomField>