force-app/main/default/objects/Account_Historical_View__b/fields/Support_Score__c.field-meta.xml
<CustomField>
    <fullName>Support_Score__c</fullName>
    <label>Support Score</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>